--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
+    "antd": "^5.24.5",
     "antd-style": "^3.7.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
